@@ -1,7 +1,5 @@
 package org.uid.ristonino.client.controller;
 
-import javafx.beans.value.ChangeListener;
-import javafx.beans.value.ObservableValue;
 import javafx.fxml.FXML;
 import javafx.fxml.FXMLLoader;
 import javafx.geometry.Bounds;
@@ -10,8 +8,8 @@ import javafx.scene.Node;
 import javafx.scene.control.Label;
 import javafx.scene.control.ScrollPane;
 import javafx.scene.layout.VBox;
-import org.uid.ristonino.client.model.Debug;
 import org.uid.ristonino.client.model.Settings;
+import org.uid.ristonino.client.model.api.ApiHandler;
 import org.uid.ristonino.client.model.events.*;
 
 import java.io.IOException;
@@ -23,14 +21,16 @@ public class MenuController {
     @FXML private VBox itemsList;
 
     private String actualCategory;
-
+    private HashMap<Integer, String> categories = new HashMap<>();
     private final Map<String, Node> categorie = new HashMap<>();
 
-    // Inizializzare con lista di categorie date da apihandler/model
+
     @FXML
     private void initialize() {
+        categories = ApiHandler.getInstance().getCategories();
         boolean firstCategory = true;
-        for (String category : Debug.categoryList) {
+
+        for (String category : categories.values()) {
             if (firstCategory) {
                 actualCategory = category;
                 firstCategory = false;
@@ -39,7 +39,7 @@ public class MenuController {
         }
 
         EventBus.getInstance().addEventHandler(SelectedCategory.EVENT_TYPE, event -> {
-            String categoria = ((SelectedCategory) event).getCategoryName();
+            String categoria = event.getCategoryName();
             VBox targetNode = (VBox) categorie.get(categoria);
             // Scorrere verso il nodo desiderato
             if (targetNode != null) {
@@ -59,41 +59,38 @@ public class MenuController {
             }
         });
         // Listener per monitorare i cambiamenti nella scrollBar
-        itemsListContainer.vvalueProperty().addListener(new ChangeListener<Number>() {
-            @Override
-            public void changed(ObservableValue<? extends Number> observable, Number oldValue, Number newValue) {
-                Bounds viewportBounds = itemsListContainer.getViewportBounds();
-                Bounds contentBounds = itemsList.getBoundsInParent();
+        itemsListContainer.vvalueProperty().addListener((observable, oldValue, newValue) -> {
+            Bounds viewportBounds = itemsListContainer.getViewportBounds();
+            Bounds contentBounds = itemsList.getBoundsInParent();
 
-                // Calcola la posizione di scorrimento
-                double viewportHeight = viewportBounds.getHeight();
-                double scrollTop = newValue.doubleValue() * (contentBounds.getHeight() - viewportHeight);
+            // Calcola la posizione di scorrimento
+            double viewportHeight = viewportBounds.getHeight();
+            double scrollTop = newValue.doubleValue() * (contentBounds.getHeight() - viewportHeight);
 
-                // Aggiungi il padding superiore del contenitore principale
-                Insets mainContentPadding = itemsList.getPadding();
-                scrollTop -= mainContentPadding.getTop();
+            // Aggiungi il padding superiore del contenitore principale
+            Insets mainContentPadding = itemsList.getPadding();
+            scrollTop -= mainContentPadding.getTop();
 
-                // Trova quale VBox è visibile
-                for (int i = 0; i < itemsList.getChildren().size(); i++) {
-                    VBox categoryBox = (VBox) itemsList.getChildren().get(i);
-                    Label categoryLabel = (Label) categoryBox.getChildren().get(0);
-                    Bounds categoryBounds = categoryBox.localToParent(categoryBox.getBoundsInParent());
+            // Trova quale VBox è visibile
+            for (int i = 0; i < itemsList.getChildren().size(); i++) {
+                VBox categoryBox = (VBox) itemsList.getChildren().get(i);
+                Label categoryLabel = (Label) categoryBox.getChildren().getFirst();
+                Bounds categoryBounds = categoryBox.localToParent(categoryBox.getBoundsInParent());
 
-                    // Aggiungi il padding della VBox della categoria
-                    Insets categoryPadding = categoryBox.getPadding();
-                    double adjustedMinY = categoryBounds.getMinY() - categoryPadding.getTop();
-                    double adjustedMaxY = categoryBounds.getMaxY() + categoryPadding.getBottom();
+                // Aggiungi il padding della VBox della categoria
+                Insets categoryPadding = categoryBox.getPadding();
+                double adjustedMinY = categoryBounds.getMinY() - categoryPadding.getTop();
+                double adjustedMaxY = categoryBounds.getMaxY() + categoryPadding.getBottom();
 
-                    // Calcola la posizione nel contenitore rispetto al viewport
-                    double relativeTop = categoryBox.getBoundsInParent().getMinY() - itemsListContainer.getContent().getBoundsInParent().getMinY();
-                    double relativeBottom = categoryBox.getBoundsInParent().getMaxY() - itemsListContainer.getContent().getBoundsInParent().getMinY();
+                // Calcola la posizione nel contenitore rispetto al viewport
+                double relativeTop = categoryBox.getBoundsInParent().getMinY() - itemsListContainer.getContent().getBoundsInParent().getMinY();
+                double relativeBottom = categoryBox.getBoundsInParent().getMaxY() - itemsListContainer.getContent().getBoundsInParent().getMinY();
 
-                    // Verifica se l'elemento è visibile nel viewport
-                    if (relativeTop < scrollTop + viewportHeight && relativeBottom > scrollTop) {
-                        EventBus.getInstance().fireEvent(new ScrolledCategory(categoryLabel.getText()));
-                        actualCategory = categoryLabel.getText();
-                        break;
-                    }
+                // Verifica se l'elemento è visibile nel viewport
+                if (relativeTop < scrollTop + viewportHeight && relativeBottom > scrollTop) {
+                    EventBus.getInstance().fireEvent(new ScrolledCategory(categoryLabel.getText()));
+                    actualCategory = categoryLabel.getText();
+                    break;
                 }
             }
         });
@@ -105,6 +102,7 @@ public class MenuController {
             FXMLLoader fxmlLoader = new FXMLLoader(getClass().getResource(Settings.SCENE_PATH + "view/category.fxml"));
             Node node = fxmlLoader.load();
             categorie.put(category, node);
+
             CategoryController controller = fxmlLoader.getController();
             controller.initialize(category);
             itemsList.getChildren().add(node);
